# tamakilabtest

./: LICENCE  LICENSE  README.md  __init__.py  imp.py  pyproject.toml  setup.py  test.py
make_shards/: README.md  __init__.py  args.py  make_shards.py  utils.py
mizuno_1/: __init__.py  mizuno_1.py
site_requests.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/average_meter.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/averagemeter/: average_meter.py
src/example_package_hori/: __init__.py  helloworld_hori.py
src/my_module/: print_test.py
src/mymod/: mymod.py
