[tool.autopep8]
# https://github.com/hhatto/autopep8#configuration
# https://pycodestyle.pycqa.org/en/latest/intro.html#error-codes
max_line_length = 120
ignore = "E5,E4"
# E4 Import
# E5 Line length
aggressive = 2

[tool.black]
# https://black.readthedocs.io/en/stable/usage_and_configuration/the_basics.html#configuration-format
line-length = 120

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "averagemeter"
version = "0.0.3"
authors = [{ name = "Toru Tamaki", email = "tamaki.toru@nitech.ac.jp" }]
description = "Average meter for logging accurary and loss"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/tamaki-lab/tamakilabtest/tree/tamaki"
"Bug Tracker" = "https://github.com/tamaki-lab/tamakilabtest/issues"
